<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Yummy Food</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Trang Chủ</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pizza">Pizza</string>
    <string name="product_name">Tên Sản Phẩm</string>
    <string name="rating">5.0</string>
    <string name="time" tools:ignore="TypographyDashes">10:00 - 23:00</string>
    <string name="remember_me">Remember me</string>
    <string name="dollar">$</string>
    <string name="dateOrder">11/07/2023</string>
    <string name="address">Địa chỉ: </string>
    <string name="totalprice">100</string>
    <string name="name_price">Tổng Tiền: $</string>
    <string name="name_hoadon">Mã Hoá Đơn:</string>
    <string name="addressOrder">Hà Nội</string>
    <string name="delivery">ĐÃ ĐẶT HÀNG</string>
    <string name="text_deletebill">Xoá lịch sử đặt hàng</string>
    <string name="payment">Thanh Toán</string>
    <string name="fullname">Họ Tên</string>
    <string name="searchyourfood">Tìm kiếm món ăn của bạn</string>
    <string name="less">-</string>
    <string name="quantity">1</string>
    <string name="add">+</string>
    <string name="phonenumber">Số Điện Thoại</string>
    <string name="orLoginwith">Hoặc đăng nhập với</string>
    <string name="delivery_address">Giao đến:</string>
    <string name="address_">96 Phố Định Công, Phương Liệt, Thanh Xuân, Hà Nội</string>
    <string name="web_client_id">389343952827-8av950cbrrpu601qbtn0g94fo9hteo7d.apps.googleusercontent.com</string>
    <string name="coming">Đang đến</string>
    <string name="history">Lịch Sử</string>
    <string name="cartItems">cart_items</string>
    <string name="ordercoming">Đang đợi giao hàng...</string>

    <string-array name="planets_array">
        <item>Pizza</item>
        <item>Hamburger</item>
        <item>Fries</item>
        <item>Mars</item>
        <item>Ice Cream</item>
        <item>Sandwich</item>
    </string-array>
</resources>