<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:background="@drawable/bg_box_rounded"
    android:layout_margin="5dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/order"
            android:layout_marginStart="5sp"
            android:layout_gravity="center"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <LinearLayout
            android:layout_marginStart="10sp"
            android:layout_width="260sp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Thời Gian:"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:id="@+id/his_dateOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="#"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_hoadon"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/his_idBill"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:text="1"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_price"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/his_totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalprice"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/address"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/his_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginStart="3dp"
                android:text="@string/addressOrder"
                android:textColor="@color/white"/>
        </LinearLayout>

        </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/rounded_textview"

        android:text="@string/delivery"/>
</LinearLayout>